Update 1.3 Evaluate, apply, and sustain security governance principles.md

--- a/DOMAIN1: The Cybersecurity Manager/1.3 Evaluate, apply, and sustain security governance principles.md
+++ b/DOMAIN1: The Cybersecurity Manager/1.3 Evaluate, apply, and sustain security governance principles.md
@@ -574,3 +574,81 @@ PCI DSS aims to secure payment card transactions and protect cardholder data fro
   <summary>Show answer</summary>
 SABSA distinguishes itself by focusing on aligning security architecture with business objectives. It provides a framework for risk management and security design that is closely integrated with the organization's overall business goals and strategies.
 </details>
+
+---
+
+## 1.3.5 Due care/due diligence ##
+
+Illustrating due diligence and due care stands as the sole method to refute negligence in the event of a loss. Senior management is obligated to exhibit due care and due diligence to mitigate their responsibility and legal liability in case of a loss.
+
+| **Aspect**         | **Due Care**                                                                                                 | **Due Diligence**                                                                                                                        |
+|--------------------|---------------------------------------------------------------------------------------------------------------|------------------------------------------------------------------------------------------------------------------------------------------|
+| **When?**          | Entails promptly rectifying issues.                                                                           | Involves a more comprehensive process including investigation into the underlying causes of incidents, events, or breaches.             |
+| **Mnemonic**       | Do control                                                                                                    | Do detect                                                                                                                                 |
+| **What**           | Promptly implementing measures to initiate mitigation procedures.                                             | Ensuring tasks were executed correctly and determining whether further action or research is warranted.                                 |
+| **What Man Rule?** | Adheres to the principle of doing what is morally and ethically right, often called the **prudent man rule**. | Aligns with the **experienced man rule**, ensuring actions follow a thorough, risk-informed process.                                    |
+| **Dependences**    | Relies on information provided by due diligence to make informed and responsible decisions.                  | Must be completed first to inform proper due care actions.                                                                               |
+| **Focus**          | Action                                                                                                         | Knowledge                                                                                                                                 |
+| **Term**           | Short term                                                                                                     | Long term                                                                                                                                 |
+
+Due diligence involves the creation of a structured security framework comprising a security policy, standards, baselines, guidelines, and procedures. On the other hand, due care entails the ongoing implementation of this security framework across the IT infrastructure of an organization.
+
+:brain: Distinguishing between due care and diligence could present a challenge in your CISSP exam or job interview. Ensure comprehension of the provided table, but refrain from overanalyzing to avoid potential pitfalls.
+
+:brain: Due care: Do control. Due diligence: Do detect
+
+### Open Questions ###
+1. What is the primary purpose of demonstrating due care and due diligence in a cybersecurity context?
+<details>
+  <summary>Show answer</summary>
+Demonstrating due care and due diligence is crucial to refute claims of negligence in the event of a security incident or loss. It helps senior management mitigate their responsibility and potential legal liability.
+</details>
+
+2. How does the "when" aspect differentiate due care from due diligence?
+<details>
+  <summary>Show answer</summary>
+Due care emphasizes promptly rectifying identified issues, while due diligence involves a more comprehensive and ongoing process of investigating underlying causes and implementing preventative measures.
+</details>
+
+3. Explain the "What Man Rule" in relation to due care and due diligence.
+<details>
+  <summary>Show answer</summary>
+Due care aligns with the "prudent man rule," implying actions taken are morally and ethically sound. Due diligence follows the "experienced man rule," meaning actions are thorough and informed by established risk parameters.
+</details>
+
+4. Why is due diligence considered a prerequisite for due care?
+<details>
+  <summary>Show answer</summary>
+Due diligence involves thorough investigation and analysis, providing the necessary information for informed decision-making and responsible action, which constitute the essence of due care.
+</details>
+
+5. What are the temporal focuses of due care and due diligence?
+<details>
+  <summary>Show answer</summary>
+Due care focuses on short-term, immediate actions to address current issues. Due diligence takes a long-term approach, aiming to prevent future incidents and build a robust security framework.
+</details>
+
+6. How does the concept of "Do Control" relate to due care?
+<details>
+  <summary>Show answer</summary>
+"Do Control" emphasizes the proactive aspect of due care, highlighting the implementation of measures to control and mitigate potential risks.
+</details>
+
+7. How does the concept of "Do Detect" relate to due diligence?
+<details>
+  <summary>Show answer</summary>
+"Do Detect" represents the investigative nature of due diligence, focusing on detecting vulnerabilities, analyzing incidents, and identifying areas for improvement.
+</details>
+
+8. Describe the role of a structured security framework in the context of due care and due diligence.
+<details>
+  <summary>Show answer</summary>
+Due diligence involves creating a structured security framework encompassing policies, standards, and procedures. Due care ensures the ongoing implementation and enforcement of this framework across the IT infrastructure.
+</details>
+
+9. Provide a concise example illustrating the difference between due care and due diligence in a real-world scenario.
+<details>
+  <summary>Show answer</summary>
+Scenario: A company discovers a data breach. Due diligence: Conducting a thorough investigation to identify the cause, compromised data, and attacker. Due care: Implementing immediate measures to contain the breach, patching vulnerabilities, and notifying affected parties.
+</details>
+
