Update 1.D.2 Wait, That’s Protected?!"— Understanding Patents, Copyrights, and Trademarks (Without Falling Asleep).md

--- a/DOMAIN1: The Cybersecurity Manager/1.D.2 Wait, That’s Protected?!"— Understanding Patents, Copyrights, and Trademarks (Without Falling Asleep).md
+++ b/DOMAIN1: The Cybersecurity Manager/1.D.2 Wait, That’s Protected?!"— Understanding Patents, Copyrights, and Trademarks (Without Falling Asleep).md
@@ -1,16 +1,16 @@
 ## 1.D.2 Wait, That’s Protected?!"— Understanding Patents, Copyrights, and Trademarks (Without Falling Asleep) ##
 
-Imagine this: You're in your garage inventing the next big thing—maybe it's a self-cleaning coffee mug, maybe it's a drone that brings you socks. Whatever it is, it’s brilliant. You tell your friend about it, and suddenly it ends up on Kickstarter under their name. Or maybe you write a killer novel called "Harry Trotter and the Bucket of Magic", and then some lawyer in a fancy suit sends you a cease-and-desist. Or maybe, just maybe, you open a burger joint and call it "McRonald’s"—and then get sued faster than you can say "Happy Meal". Welcome to the world of intellectual property, where patents, copyrights, and trademarks are the legal superheroes (or supervillains, depending on your side of the lawsuit). Let’s dive into each of these using very real and very famous examples that will stick in your brain like a pop song.
+Imagine this: You're in your garage inventing the next big thing—maybe it's a self-cleaning coffee mug, maybe it's a drone that brings you socks. Whatever it is, it’s brilliant. You tell your friend about it, and suddenly it ends up on Kickstarter under their name. Or maybe you write a killer novel called "Harry Trotter and the Bucket of Magic", and then some lawyer in a fancy suit sends you a cease-and-desist. Or maybe, just maybe, you open a burger joint and call it "McRonald’s"—and then get sued faster than you can say "Happy Meal". Welcome to the world of intellectual property, where patents, copyrights, and trademarks are the legal superheroes (or supervillains, depending on your side of the lawsuit). Let’s dive into each of these.
 
-Patent: The Wright Brothers vs. Everyone with a Screwdriver
+**Patent: The Wright Brothers vs. Everyone with a Screwdriver**
 
 What it is: A patent gives inventors exclusive rights to make, use, or sell their invention for a limited time (usually 20 years). It's the law’s way of saying: “Nice job. Now milk it for a couple decades.”
 
-Famous Example: The Wright Brothers’ Flying Machine Patent. In 1906, the Wright Brothers received U.S. Patent No. 821,393 for their “Flying Machine.” And no, it wasn’t just "a plane." Their patent covered the method of controlling an aircraft in flight—specifically, wing-warping. They spent more time in court than in the sky, suing other aviation pioneers left and right.
+Famous Example: The Wright Brothers’ Flying Machine Patent. In 1906, the Wright Brothers received U.S. Patent No. 821 393 for their “Flying Machine.” And no, it wasn’t just "a plane." Their patent covered the method of controlling an aircraft in flight—specifically, wing-warping. They spent more time in court than in the sky, suing other aviation pioneers left and right.
 
 Moral of the story: A patent protects how something works. Even if you didn’t invent the idea of flying, if you invent a new way to steer a plane—you can own that baby for 20 years. Warning: Patents expire. Just ask everyone now making generic Viagra.
 
-Copyright: Disney, the Mouse, and the War on Public Domain
+**Copyright: Disney, the Mouse, and the War on Public Domain**
 
 What it is: Copyright protects original works of authorship—like books, movies, songs, paintings, and software. It lasts for the life of the author plus 70 years (or more if Disney has anything to say about it).
 
@@ -18,7 +18,7 @@ Famous Example: Mickey Mouse and Disney's Legal Sorcery. Mickey Mouse first appe
 
 Moral of the story: Copyright protects the expression of ideas, not the idea itself. That means the plot of Romeo and Juliet is fair game, but Baz Luhrmann’s specific adaptation with Leonardo DiCaprio is not. Also: Stealing a song or movie is not a victimless crime. Especially if the victim has theme parks and an army of lawyers.
 
-Trademark: You Can't Just Call It "Coca-Cola Lite"
+**Trademark: You Can't Just Call It "Coca-Cola Lite"**
 
 What it is: Trademarks protect brands—logos, slogans, names, anything that identifies the source of goods or services.
 
@@ -26,7 +26,7 @@ Famous Example: Coca-Cola. Invented in 1886, Coca-Cola has arguably the most val
 
 Moral of the story: Trademarks are about identity and consumer trust. If someone sees your logo and thinks they’re buying from a well-known brand when they’re not—that’s where the law steps in. Trademarks can last forever. Yep—forever. As long as you keep using it and defending it.
 
-Wrap-Up: Your IP Survival Guide
+**Wrap-Up: Your IP Survival Guide**
 
 Type: Patent
 Protects: Inventions (how things work)
