Update 1.D.2 Wait, That’s Protected?!"— Understanding Patents, Copyrights, and Trademarks (Without Falling Asleep).md

--- a/DOMAIN1: The Cybersecurity Manager/1.D.2 Wait, That’s Protected?!"— Understanding Patents, Copyrights, and Trademarks (Without Falling Asleep).md
+++ b/DOMAIN1: The Cybersecurity Manager/1.D.2 Wait, That’s Protected?!"— Understanding Patents, Copyrights, and Trademarks (Without Falling Asleep).md
@@ -28,17 +28,17 @@ Moral of the story: Trademarks are about identity and consumer trust. If someone
 
 **Wrap-Up: Your IP Survival Guide**
 
-Type: Patent
+- Patent
 Protects: Inventions (how things work)
 How Long: 20 years
 Example: Wright Brothers' flight controls
 
-Type: Copyright
+- Copyright
 Protects: Creative expressions
 How Long: Life + 70 years
 Example: Disney’s Mickey Mouse
 
-Type: Trademark
+- Trademark
 Protects: Brand identity (names, logos, etc.)
 How Long: Indefinitely (with renewal)
 Example: Coca-Cola logo and branding
