Update 1.4 Understand legal, regulatory, and compliance issues that pertain to information security in a holistic context.md

--- a/DOMAIN1: The Cybersecurity Manager/1.4 Understand legal, regulatory, and compliance issues that pertain to information security in a holistic context.md
+++ b/DOMAIN1: The Cybersecurity Manager/1.4 Understand legal, regulatory, and compliance issues that pertain to information security in a holistic context.md
@@ -146,18 +146,19 @@ Trade secrets offer indefinite protection for confidential information that prov
 <details>
   <summary>Show answer</summary>
 "Works for hire" refer to creations made by employees within the scope of their employment or commissioned works under contract. In these cases, the employer or commissioning party holds the copyright ownership rather than the individual creator.
-
+</details>
 
 6. What distinguishes a contractual license agreement from a shrink-wrap license agreement in software licensing?
 <details>
   <summary>Show answer</summary>
 Contractual license agreements involve a written contract negotiated between the software vendor and customer, outlining specific terms and conditions for software use. In contrast, shrink-wrap license agreements are typically pre-printed terms and conditions found on the exterior of software packaging, where opening the package implies acceptance of the terms.
-
+</details>
 
 7. How do click-through license agreements function, and what are some potential concerns associated with them?
 <details>
   <summary>Show answer</summary>
 Click-through agreements, commonly used for software downloads and online services, present terms and conditions on-screen, requiring users to actively click "I agree" or a similar button to proceed. Concerns arise as users often click through without thoroughly reading the terms, potentially agreeing to unfavorable conditions.
+</details>
 
 8. Provide an example of trademark counterfeiting and explain how it harms the original brand.
 <details>
