Update 1.4 Understand legal, regulatory, and compliance issues that pertain to information security in a holistic context.md

--- a/DOMAIN1: The Cybersecurity Manager/1.4 Understand legal, regulatory, and compliance issues that pertain to information security in a holistic context.md
+++ b/DOMAIN1: The Cybersecurity Manager/1.4 Understand legal, regulatory, and compliance issues that pertain to information security in a holistic context.md
@@ -196,17 +196,17 @@ flowchart TD
     A --> ITAR[International Traffic in Arms Regulations (ITAR)]:::box
     A --> EAR[Export Administration Regulations (EAR)]:::box
 
-    WA --> WA1["➤ Oversees transfer of conventional weapons:\n  - Firearms\n  - Explosives\n  - Naval weaponry\n  - Landmines"]
-    WA --> WA2["➤ Controls dual-use items & technologies"]
-    WA --> WA3["➤ 2013 update: includes cyber weapons:\n  - Malicious software\n  - Command & control systems\n  - Internet surveillance tools"]
+    WA --> WA1["> Oversees transfer of conventional weapons:\n  - Firearms\n  - Explosives\n  - Naval weaponry\n  - Landmines"]
+    WA --> WA2["> Controls dual-use items & technologies"]
+    WA --> WA3["> 2013 update: includes cyber weapons:\n  - Malicious software\n  - Command & control systems\n  - Internet surveillance tools"]
 
-    ITAR --> ITAR1["➤ U.S. regulation"]
-    ITAR --> ITAR2["➤ Controls items on the USML (United States Munitions List)"]
-    ITAR --> ITAR3["➤ Includes: Missiles, Rockets, Bombs"]
+    ITAR --> ITAR1["> U.S. regulation"]
+    ITAR --> ITAR2["> Controls items on the USML (United States Munitions List)"]
+    ITAR --> ITAR3["> Includes: Missiles, Rockets, Bombs"]
 
-    EAR --> EAR1["➤ Focus on commercial items"]
-    EAR --> EAR2["➤ Includes: Computers, marine equipment"]
-    EAR --> EAR3["➤ Also covers dual-use items with military potential"]
+    EAR --> EAR1["> Focus on commercial items"]
+    EAR --> EAR2["> Includes: Computers, marine equipment"]
+    EAR --> EAR3["> Also covers dual-use items with military potential"]
 
     classDef header fill:#333,color:#fff,font-weight:bold
     classDef box fill:#ccc,stroke:#666,stroke-width:1px
