Update 1.4 Understand legal, regulatory, and compliance issues that pertain to information security in a holistic context.md

--- a/DOMAIN1: The Cybersecurity Manager/1.4 Understand legal, regulatory, and compliance issues that pertain to information security in a holistic context.md
+++ b/DOMAIN1: The Cybersecurity Manager/1.4 Understand legal, regulatory, and compliance issues that pertain to information security in a holistic context.md
@@ -190,11 +190,11 @@ The Export Administration Regulations (EAR) primarily addresses items intended f
 
 ```mermaid 
 flowchart TD
-    A[Arms Control Mechanisms]:::header
+    A["Arms Control Mechanisms"]:::header
 
-    A --> WA[Wassenaar Arrangement]:::box
-    A --> ITAR[International Traffic in Arms Regulations (ITAR)]:::box
-    A --> EAR[Export Administration Regulations (EAR)]:::box
+    A --> WA["Wassenaar Arrangement"]:::box
+    A --> ITAR["International Traffic in Arms Regulations (ITAR)"]:::box
+    A --> EAR["Export Administration Regulations (EAR)"]:::box
 
     WA --> WA1["> Oversees transfer of conventional weapons:\n  - Firearms\n  - Explosives\n  - Naval weaponry\n  - Landmines"]
     WA --> WA2["> Controls dual-use items & technologies"]
