Update 1.4 Understand legal, regulatory, and compliance issues that pertain to information security in a holistic context.md

--- a/DOMAIN1: The Cybersecurity Manager/1.4 Understand legal, regulatory, and compliance issues that pertain to information security in a holistic context.md
+++ b/DOMAIN1: The Cybersecurity Manager/1.4 Understand legal, regulatory, and compliance issues that pertain to information security in a holistic context.md
@@ -189,7 +189,7 @@ The International Traffic in Arms Regulations (ITAR) is a US regulation designed
 The Export Administration Regulations (EAR) primarily addresses items intended for commercial use, such as computers and marine equipment, but also covers products with potential military applications, even if initially designed for commercial purposes.
 
 ```mermaid 
-flowchart TD
+flowchart LR
     A["Arms Control Mechanisms"]:::header
 
     A --> WA["Wassenaar Arrangement"]:::box
@@ -208,8 +208,8 @@ flowchart TD
     EAR --> EAR2["> Includes: Computers, marine equipment"]
     EAR --> EAR3["> Also covers dual-use items with military potential"]
 
-    classDef header fill:#333,color:#fff,font-weight:bold
-    classDef box fill:#ccc,stroke:#666,stroke-width:1px
+    classDef header fill:#555555,color:#eeeeee,font-weight:bold
+    classDef box fill:#bbbbbb,stroke:#888888,stroke-width:1px
 ```
 
 Both the EAR and the ITAR mandate that U.S. residents seek permission before disseminating controlled technology or technical data to foreign individuals within the United States. When such information is shared with a foreign person, it is considered an export to the individual's country or countries of citizenship. To prevent a "deemed export" scenario, organizations providing information to foreign nationals must obtain a license from the U.S. government before disclosing controlled technology or technical data to nonimmigrants.
