--- a/DOMAIN1: The Cybersecurity Manager/1.4 Understand legal, regulatory, and compliance issues that pertain to information security in a holistic context.md
+++ b/DOMAIN1: The Cybersecurity Manager/1.4 Understand legal, regulatory, and compliance issues that pertain to information security in a holistic context.md
@@ -208,8 +208,8 @@ flowchart LR
     EAR --> EAR2["> Includes: Computers, marine equipment"]
     EAR --> EAR3["> Also covers dual-use items with military potential"]
 
-    classDef header fill:#3a3a3a,color:#f5f5f5,font-weight:bold,stroke:#000000,stroke-width:1px
-    classDef box fill:#bfbfbf,stroke:#000000,stroke-width:1px
+    classDef header fill:#ffffff,color:#000000,font-weight:bold,stroke:#000000,stroke-width:1px
+    classDef box fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px
 ```
 
 Both the EAR and the ITAR mandate that U.S. residents seek permission before disseminating controlled technology or technical data to foreign individuals within the United States. When such information is shared with a foreign person, it is considered an export to the individual's country or countries of citizenship. To prevent a "deemed export" scenario, organizations providing information to foreign nationals must obtain a license from the U.S. government before disclosing controlled technology or technical data to nonimmigrants.
